provided app.properties

--- a/initializer/src/main/resources/application.properties
+++ b/initializer/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8090
-users.filename=/projects/users.data
+users.filename=/home/paulponama/scripts/users.data
+server.ssl.key-store: /home/paulponama/scripts/keystore.p12
+server.ssl.key-store-password: guristas
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
